test/distributions/bradc/idxToLocale.comm-none.good
LOCALE0
idxToLocale.chpl:3: error: halt reached - indexing out of bounds in dimension 1: [1] but array bounds are 0..0
