test/distributions/bradc/idxToLocale.chpl
writeln(defaultDist.idxToLocale(1));

on rootLocale.getLocales()(1) {
  writeln(defaultDist.idxToLocale(1));
}

